--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,13 @@
         </plugins>
         <finalName>ProductionResources</finalName>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+    </dependencies>
     
 </project>
