--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-core-avl</artifactId>
+            <version>2.0.0.AM27</version>
+        </dependency>
     </dependencies>
     
     
